--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@knowledge-base/server",
+  "name": "@portal/server",
   "version": "0.0.1",
   "type": "module",
   "main": "server.ts",
