--- a/packages/server/.env.template
+++ b/packages/server/.env.template
@@ -1,2 +1,7 @@
-BUN_PUBLIC_SERVER_URL="http://localhost:3000/api/v1"
 BUN_VERSION=1.2.15
+PRIVY_APP_SECRET=default
+
+# Client
+BUN_PUBLIC_SERVER_URL="http://localhost:3000/api/v1"
+BUN_PUBLIC_PRIVY_APP_ID=default
+BUN_PUBLIC_PRIVY_CLIENT_ID=portal
