--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
     "@hookform/resolvers": "^4.1.0",
+    "@privy-io/react-auth": "^2.14.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
