--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-router": "^1.120.16",
     "@tanstack/react-router-devtools": "^1.120.16",
     "@types/moment": "^2.13.0",
+    "@web3-storage/w3up-client": "^17.3.0",
     "bun-plugin-tailwind": "^0.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
