web3.storage workign

--- a/packages/server/.env.template
+++ b/packages/server/.env.template
@@ -1,3 +1,5 @@
 BUN_VERSION=1.2.15
 BUN_PUBLIC_SERVER_URL="http://localhost:3000/api/v1"
 BUN_PUBLIC_PRIVY_APP_ID=cmbvvxh8m00g3l70oejckj2iy
+W3UP_EMAIL=kartik100100@gmail.com
+W3UP_SPACE_NAME=portal
