--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,11 +2,9 @@
   "name": "@portal/server",
   "version": "0.0.1",
   "type": "module",
-  "main": "server.ts",
-  "module": "server.ts",
   "scripts": {
-    "dev": "bun --hot server.ts",
-    "start": "NODE_ENV=production bun server.ts",
+    "dev": "bun --hot dev.ts",
+    "start": "NODE_ENV=production bun prod.ts",
     "build": "bun run build.ts",
     "analyze": "bun install --analyze src/**/*.tsx"
   },
