--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "@hono/zod-validator": "^0.7.0",
     "@hookform/resolvers": "^4.1.0",
     "@privy-io/react-auth": "^2.14.2",
+    "@privy-io/wagmi": "^1.0.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -54,6 +55,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "2.x",
+    "wagmi": "^2.15.6",
     "zod": "^3.24.2",
     "zustand": "^5.0.5"
   },
