--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
     "@hookform/resolvers": "^4.1.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@privy-io/react-auth": "^2.14.2",
     "@privy-io/wagmi": "^1.0.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -41,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
     "hono": "^4.7.11",
     "hono-rate-limiter": "^0.4.2",
@@ -63,7 +65,10 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/bun": "latest",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.1",
+    "tsx": "^4.20.3"
   }
 }
