env template update

--- a/packages/server/.env.template
+++ b/packages/server/.env.template
@@ -7,6 +7,6 @@ BUN_PUBLIC_SERVER_URL="http://localhost:3000/api/v1"
 SUPERADMIN_PASSWORD=dummy
 
 W3UP_EMAIL=kartik100100@gmail.com
-W3UP_SPACE_NAME=portal
+W3UP_SPACE_NAME=portal-dev
 
 DATABASE_URL=dummy
