Add react integration for acontract

--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "@portal/core",
   "version": "0.0.1",
-  "module": "index.ts",
-  "type": "module",
+  "contributors": [
+    {
+      "name": "Spandan Barve",
+      "url": "https://github.com/marsian83"
+    },
+    {
+      "name": "Riya Jain",
+      "url": "https://github.com/jriyyya"
+    },
+    {
+      "name": "Kartikay Tiwari",
+      "url": "https://github.com/ishtails"
+    }
+  ],
   "private": true,
   "devDependencies": {
     "@types/bun": "latest"
