--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,8 +1,9 @@
 {
   "name": "contracts",
-  "module": "index.ts",
   "private": true,
-  "exports": "./exports.ts",
+  "exports": {
+    ".": "./exports.ts"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
     "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
