--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -17,7 +17,7 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=18.0.0",
     "chai": "^4.2.0",
-    "hardhat": "^2.14.0",
+    "hardhat": "^2.25.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
@@ -27,6 +27,7 @@
     "typescript": "~5.0.4"
   },
   "dependencies": {
+    "@noble/secp256k1": "^2.3.0",
     "@openzeppelin/contracts": "^5.3.0"
   }
 }
