--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,6 @@
     "analyze": "bun install --analyze src/**/*.tsx"
   },
   "dependencies": {
-    "contracts": "workspace:*",
     "@hono/zod-validator": "^0.7.0",
     "@hookform/resolvers": "^4.1.0",
     "@neondatabase/serverless": "^1.0.1",
@@ -43,10 +42,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "contracts": "workspace:*",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
     "hono": "^4.7.11",
     "hono-rate-limiter": "^0.4.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "motion": "^12.15.0",
@@ -66,6 +67,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/bun": "latest",
+    "@types/jszip": "^3.4.1",
     "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
